--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.9.1</version>
+        </dependency>
 
     </dependencies>
 
